objects/CompetenceDoctorAccount__c.object
<CustomObject>
    <label>Kompetenz Arzt Account</label>
    <nameField>
        <label>Competence Docotor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Kompetenz Arzt Account</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <lookupFilter>
            <active>false</active>
            <errorMessage>Diese Kompetenz ist nur für Arzt-Accounts erlaubt</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Doctor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Kompetenz Arzt Account</relationshipLabel>
        <relationshipName>Kompetenzen</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Format: &quot;vt.contact.&lt;id&gt;.&lt;md5&gt;&quot;, having the md5 checksum from the concatenated values of the qualification and the speciality.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>T_Doctor_Job__c</fullName>
        <formula>Text(QualificationLevel__c) &amp; &quot;_&quot; &amp; Text( MedicalDiscipline__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>[T] Doctor Job</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Doctor_Number__c</fullName>
        <description>Every Competence of a doctor has a number.
Robin S. 19.09.2019</description>
        <label>Doctor Number (LANR)</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MedicalDiscipline__c</fullName>
        <label>Medical Discipline</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Fachbereich</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>MigrationProtocol__c</fullName>
        <label>Migration Protocol</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>PrimaryCompetence__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox flagged the primary competence of a doctor account. This flag is needed by Porky. 
Robin. S. 26.06.2019</description>
        <inlineHelpText>Wenn eine Kompetenz durch diese Checkbox gekennzeichnet ist, dann wird sie auch in Porky hinterlegt. Es ist nur möglich eine Kompetenz pro Arzt zu markieren.</inlineHelpText>
        <label>Primary Competence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QualificationLevel__c</fullName>
        <label>Qualification Level</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Assistenzarzt</fullName>
                </value>
                <value>
                    <fullName>Facharzt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AdditionalDesignations__c</fullName>
        <label>Additional Designations</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Zusatzbezeichnung</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>T_Count_for_Account_Rollup__c</fullName>
        <defaultValue>1</defaultValue>
        <label>[T]Count for Account Rollup</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>T_Count_for_Opportunity_rollup__c</fullName>
        <defaultValue>1</defaultValue>
        <description>This field is used for DLRS and automatic Opportunity Naming.
Robin S. 28.02.2019</description>
        <label>[T] Count for Opportunity rollup</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>